[tool.poetry]
name = "python-mpw"
version = "0.1.0"
description = ""
authors = ["Mike Wagner <mpwagner1@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mpw"}]

[tool.poetry.dependencies]
python = "^3.10"
usersshared = { git = "git@github.com:mpwagner1/python_mpw.git", branch = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
