[tool.poetry]
name = "python-mpw"
version = "0.1.0"
description = ""
authors = ["Mike Wagner <mpwagner1@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mpw"}]

[tool.poetry.dependencies]
python = "^3.10"
users = { git = "git@github.com:mpwagner1/python_mpw.git", branch = "main"}

[[tool.poetry.source]]
name = "GitHub"
url = "https://github.com/mpwagner1/python_mpw,branch=main"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
